projects/compiler/test/typechecker/match/error_exhaustive_Enum_variants.1.out
Error at %TEST_DIR%/typechecker/match/error_exhaustive_Enum_variants.1.abra:8:3
Unreachable match case
  |    else => 4
       ^
The previous case(s) cover all possibilities for match target type 'Color'
